src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-238.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uv=.0\")"
---
items:
  - loc: "#units uv=.0"
    locs:
      directive: "#units"
    options:
      - loc: uv=.0
        locs:
          option: uv
          variance: ".0"
        option: UnitVariance
        variance: 0
    type: UnitsDirective
