src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-240.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uv=-1.3\")"
---
items:
  - loc: "#units uv=-1.3"
    locs:
      directive: "#units"
    options:
      - loc: uv=-1.3
        locs:
          option: uv
          variance: "-1.3"
        option: UnitVariance
        variance: -1.3
    type: UnitsDirective
