src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-241.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uv=-1.3a\")"
---
INVALID:
  items:
    - loc: "#units uv=-1.3a"
      locs:
        directive: "#units"
      options:
        - loc: uv=-1.3
          locs:
            option: uv
            variance: "-1.3"
          option: UnitVariance
          variance: -1.3
      type: UnitsDirective
issues:
  - code: EUNEXPECTED
    loc: a
    message: Unexpected text
    severity: Error
