src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-243.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uv=--1.3\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units uv=--1.3"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: uv=--1.3
              locs:
                option: uv
                variance: "--1.3"
              option: UnitVariance
              variance: "--1.3"
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDUNITVARIANCE
    loc: "--1.3"
    message: Invalid unit variance
    severity: Error
