src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-244.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix\")"
---
items:
  - level: Prefix1
    loc: "#prefix"
    locs:
      directive: "#prefix"
    type: PrefixDirective
